# codegen

./: .coveragerc  .editorconfig  .env.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  ANALYSIS_VIEW_MOCKUP.md  CHANGES.md  CODEMOD_README.md  CONTRIBUTING.md  DOCUMENTATION_UPDATES.md  Dockerfile  FEATURES.md  LICENSE  MODULE_DISASSEMBLER_README.md  PROJECT.md  README.md  README_CODEBASE_ORGANIZER.md  README_CODEGEN.md  README_enhanced.md  SUGGESTIONS.md  TYPESCRIPT_MIGRATION.md  call_chain_analysis.py  code_suggestions_fixed.py  code_suggestions_original.py  codebase_analyzer.py  codebase_analyzer.py.bak  codebase_analyzer_integration.py  codebase_analyzer_new.py  codebase_analyzer_patch.py  codegen_embedding_provider.py  codemod_analyzer_refactor.py  complex_fixed.py  complex_original.py  dead_code_detection.py  dead_symbol_detection.py  enhanced_analyzer.py  enhanced_ui_mockup.md  example_codegen_usage.py  example_usage.py  (+63 more)
codegen-examples/examples/codebase_analysis_api/: ANALYSIS_VIEW_MOCKUP.md  README.md  api.py  client.py  pyproject.toml  requirements.txt
codegen-examples/examples/linear_webhooks/: .env.template  README.md  deploy.sh  pyproject.toml  webhooks.py
codegen-examples/examples/snapshot_event_handler/: README.md  deploy.sh  event_handlers.py  pyproject.toml
codegen-on-oss/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  README_CODE_INTEGRITY.md  README_ENHANCED.md  STRUCTURE.md  codegen_modal_deploy.py  codegen_modal_run.py  docker-compose.enhanced.yaml  docker-compose.yml  modal_run.py  mypy.ini  mypy_plugin.py  pyproject.toml  requirements.txt  setup.py
codegen-on-oss/codegen_on_oss/: README.md  README_CODEBASE_ANALYSIS.md  __init__.py  analysis_viewer_cli.py  analysis_viewer_cli.pyi  analysis_viewer_web.py  analysis_viewer_web.pyi  analyze.py  api.py  app.py  bucket_store.py  cache.py  cli.py  cli.pyi  codebase_analyzer.py  codebase_analyzer.pyi  codebase_comparator.py  codebase_comparator.pyi  config.py  context_retriever.py  error_analyzer.py  errors.py  harness.py  helpers.py  main.py  metrics.py  parser.py  server.py
codegen-on-oss/codegen_on_oss/analysis/: README.md  README_ENHANCED.md  WSL_README.md  __init__.py  analysis.py  analysis_import.py  analysis_service.py  api_endpoints.py  code_analyzer.py  code_integrity.py  code_integrity_analyzer.py  code_integrity_integration.py  code_integrity_main.py  code_metrics.py  code_transformations.py  codebase_analysis.py  codebase_comparison.py  codebase_context.py  codegen_sdk_codebase.py  commit_analysis.py  commit_analyzer.py  commit_example.py  complexity_analyzer.py  consolidated_analyzer.py  coordinator.py  current_code_codebase.py  dependency_analyzer.py  diff_analyzer.py  document_functions.py  enhanced_server_example.py  enhanced_type_detection.py  error_context.py  error_detection.py  error_example.py  error_handler.py  example.py  feature_analyzer.py  function_call_analysis.py  harness_integration.py  import_analysis.py  (+24 more)
codegen-on-oss/codegen_on_oss/analyzers/: README.md  README_codebase_ai.md  README_current_code_codebase.md  __init__.py  analyzer.py  analyzer_manager.py  api.py  base_analyzer.py  code_quality.py  code_quality_analyzer.py  codebase_ai.py  codebase_analysis.py  codebase_analyzer.py  codebase_context.py  codebase_visualizer.py  codegen_sdk_codebase.py  context_codebase.py  current_code_codebase.py  dependencies.py  dependency_analyzer.py  diff_lite.py  error_analyzer.py  issue_analyzer.py  issue_types.py  issues.py  mdx_docs_generation.py  organize.py  parser.py  test_organize.py  transaction_manager.py  transactions.py  unified_analyzer.py  utils.py
codegen-on-oss/codegen_on_oss/api/: README.md  __init__.py  app.py  auth.py  graphql.py  graphql_schema.py  public_api.py  rest.py  routes.py  schemas.py  server.py  unified_api.py  websocket.py  websocket_manager.py
codegen-on-oss/codegen_on_oss/cache/: README.md  __init__.py  manager.py
codegen-on-oss/codegen_on_oss/context_server/: __init__.py  server.py
codegen-on-oss/codegen_on_oss/database/: README.md  __init__.py  cli.py  connection.py  manager.py  migrations.py  models.py  repositories.py  repository.py  service.py  session.py
codegen-on-oss/codegen_on_oss/events/: README.md  __init__.py  bus.py  event_bus.py  handlers.py
codegen-on-oss/codegen_on_oss/frontend/: package.json  tailwind.config.ts
codegen-on-oss/codegen_on_oss/outputs/: __init__.py  base.py  csv_output.py  html_report_generator.py  sql_output.py
codegen-on-oss/codegen_on_oss/pipeline/: __init__.py  orchestrator.py
codegen-on-oss/codegen_on_oss/scripts/: README.md  __init__.py  analyze_code_integrity.py  analyze_code_integrity_example.py  analyze_pr.py  cleanup.py  codebase_analyzer.py  compare_codebases.py  compare_pr_codebase.py  create_db.py  db  error_analyzer.py  install_wsl_dependencies.py  integration_example.py  run_wsl_server.py  wsl_server_cli.py
codegen-on-oss/codegen_on_oss/server/: README.md
codegen-on-oss/codegen_on_oss/snapshot/: README.md  __init__.py  codebase_snapshot.py  consolidated_snapshot.py  context_snapshot.py  enhanced_snapshot.py  enhanced_snapshot_manager.py  event_handlers.py  helpers.py  pr_review.py  pr_tasks.py  snapshot_manager.py  snapshot_service.py
codegen-on-oss/codegen_on_oss/sources/: __init__.py  base.py  csv_source.py  github_source.py  single_source.py
codegen-on-oss/docs/: analysis_viewer_cli.md  codebase_analyzer.md  pr_analysis_rules.md
codegen-on-oss/examples/: __init__.py  analyze_and_snapshot.py  codebase_ai_example.py  codebase_analysis_example.py  context_server_example.py  enhanced_architecture_demo.py  parser_example.py  pr_analysis_example.py  start_server.py  visualization_examples.py
codegen-on-oss/scripts/: analyze_code_integrity.py  analyze_code_integrity_example.py  create_db.py  example_usage.py  setup_db.py  test_analyzer.py
codegen-on-oss/tests/: test_analysis_viewer_cli.py  test_analyzers_parser.py  test_codebase_analysis.py  test_codebase_analyzer.py  test_codegen_sdk_codebase.py  test_current_code_codebase.py  test_pr_analysis_rules.py
(+1915 files in other folders)
