[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codegen-on-oss"
version = "0.1.0"
description = "Enhanced Codegen-on-OSS Architecture"
readme = "README_ENHANCED.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "networkx",
    "platformdirs",
    "pydantic-settings",
    "fastapi",
    "requests",
    "sqlalchemy",
    "uvicorn",
    "websockets",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "black",
    "isort",
    "pytest",
    "ruff",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["codegen_on_oss"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["codegen_on_oss"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
strict_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
warn_unreachable = false
ignore_missing_imports = true
disable_error_code = ["attr-defined", "name-defined", "call-arg", "arg-type", "index", "valid-type", "misc", "assignment", "var-annotated", "annotation-unchecked", "import-untyped", "dict-item", "no-redef"]
