[project]
name = "codegen-on-oss"
version = "0.1.0"
description = "Codegen on OSS"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Codegen Team", email = "team@codegen.sh" },
]
dependencies = [
    "codegen",
    "pandas",
    "PyGithub",
    "rich",
    "networkx",
    "matplotlib",
    "gradio",
]

[project.scripts]
codegen-on-oss = "codegen_on_oss.cli:main"

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "pytest",
    "pytest-cov",
    "ruff",
    "tox",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools]
py-modules = ["codegen_on_oss"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "B", "I"]
ignore = []
