[tool.poetry]
name = "codebase-analysis-api"
version = "0.1.0"
description = "A comprehensive API for analyzing codebases using Codegen SDK"
authors = ["Codegen <support@codegen.sh>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.0"
uvicorn = "^0.22.0"
python-multipart = "^0.0.6"
requests = "^2.28.2"
networkx = "^3.0"
plotly = "^5.14.0"
rich = "^13.3.5"
codegen = "^0.1.0"
pydantic = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

