[project]
name = "linear-webhook-example"
version = "0.1.0"
description = "Linear webhook example for Codegen"
requires-python = ">=3.13"
dependencies = [
    "codegen>=0.22.2", 
    "modal>=0.73.25",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.0.270"
]
