[project]
name = "linear-webhooks"
version = "0.1.0"
description = "Linear webhook example for Codegen"
requires-python = ">=3.13"
dependencies = [
  "modal>=0.73.25",
  "fastapi[standard]",
  "codegen>=0.52.19",
  "python-dotenv>=1.0.0",
  "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = ["black>=23.0.0", "isort>=5.12.0", "mypy>=1.0.0", "ruff>=0.0.270"]
