[project]
name = "snapshot-event-handler"
version = "0.1.0"
description = "Snapshot event handler for Codegen"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "modal>=0.73.25",
  "fastapi[standard]",
  "codegen>=0.52.19",
  "python-dotenv>=1.0.0",
]
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Development Status :: 4 - Beta",
  "Environment :: MacOS X",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python",
]

[tool.ruff]
line-length = 200
exclude = ["**/input_repo/**", "**/output_repo/**", "**/repositories/**"]

[tool.uv]
cache-keys = [{ git = { commit = true, tags = true } }]
